public/css/style.css
/* ... */
.card-content {
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color: var(--bg);
  border-radius: 0 0 14px 14px;
  box-sizing: border-box;
}

.card-title {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 18px;
  color: var(--darkAc);
  margin: 0;
}

.card-button {
  background-color: #7c56fe;
  border-radius: 10px;
  width: 95%;
  height: 37px;
  margin-top: 8px;
  border-width: 1px;
  border: none;
  color: #fff;
  font-size: 14px;
  font-weight: bold;
  text-align: center;
  margin-bottom: 3px;
}

.product-section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: var(--lightAc);
  margin: 12px;
}

.products-icons {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 0px;
  width: 100%;
}

.section hr {
  width: 60vw;
  border: 1px solid var(--lightAc);
  margin: 2.5%;
}

.section {
  text-align: left;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.services-section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: var(--linkBgDark);
  width: auto;
  margin-bottom: 0px;
}

.services-icons {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
  margin: 0px;
  width: 100%;
  flex-wrap: wrap;
}

.service {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: var(--darkAc);
  font-weight: 600;
  background-color: var(--linkBg);
  padding: 2% 3% 2% 3%;
  border-radius: 73px;
  flex-wrap: nowrap;
  white-space: nowrap;
  margin: 6px;
}

.s-title {
  padding: 0px;
  margin: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--subText);
}

.submit_btn,
#btn_hi {
  width: 80%;
}

.embedding {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: var(--lightAc);
  width: 100%;
  height: auto;
  min-height: 171px;
}

.video {
  /* margin: 10%; */
  /* width: ; */
  min-height: 171px;
  min-width: 75vw;
  height: auto;
  margin-top: 10%;
}

iframe {
  border-radius: 15px;
  width: 100%;
  min-height: 171px;
  height: auto;
  margin-bottom: 5vh;
}

.websites-icons {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: row;
  margin: 0px;
  width: 100%;
  flex-wrap: wrap;
}

.link-card {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  background-color: var(--linkBg);
  color: var(--darkAc);
  width: 100%;
  max-height: 58px;
  margin: 3% 10% 3% 10%;
  border-radius: 12px;
}

.link {
  padding: 4%;
  margin: 0px;
  color: var(--subText);
}

.image {
  background-color: #beff6c;
  margin: 3px;
  width: 50px;
  height: 50px;
  border-radius: 12px;
  border: none;
}

.image {
  background-color: var(--btnBg);
}
.image i,
.btnBg {
  transform: scale(1.8);
  color: var(--btnTxt);
}

.contacts-icons,
.sm-icons {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  row-gap: 25px;
  column-gap: 25px;
  flex-wrap: wrap;
  text-decoration: none;
}

.discription {
  color: var(--subData);
}

.image-container {
  position: relative;
  top: -7vh;
}

.image-container img[alt="Image"] {
  
  width: 100%;
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), #000000;
  border: 0.5px solid rgba(43, 175, 164, 0.5);
  border-radius: 0px 0px 24px 24px;
  height: 60vw;
  object-fit: cover;
  object-position: center;
  
}

.button-overlay {
  position: absolute;
  top: 100px;
  right: 30px;
  z-index: 1;
}

.button-overlay a {
  display: inline-block;
  padding: 8px;
  background-color: #333;
  color: var(--fg);
  text-decoration: none;
  border: 1px solid #beff6c;
  box-shadow: 1px 8px 31px rgba(0, 0, 0, 0.64);
  backdrop-filter: blur(3.5px);
  border-radius: 25px;
  position: relative;
}

.button-overlay a img {
  width: 21px;
  height: 21px;
  padding: 0px;
  margin: 0px;
}

.profile-image-overlay {
  position: static;
  top: -10vh;
  z-index: 3;
  width: 133px;
  height: 133px;
  border: 2px solid #ffffff;
  border-radius: 32px;
  overflow: hidden;
}

.profile-image-overlay img {
  position: relative;
  width: 100%;
}

.user-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  margin-top: -17.5vh;
}

.discription {
  height: fit-content;
  line-height: 1vh;
  width: 60%;
  text-align: center;
}

.main-section {
  width: auto;
  height: auto;
  margin: 3rem;
  padding: 2rem;
  text-align: left;
  border: 1px solid var(--border);
  border-radius: 14px;
  color: var(--bodyContent);
}

.details {
  overflow-wrap: break-word;
}

.model_container,
.popup__container {
  display: none;
  opacity: 0;
  transition: 0.5s;
}
.popup__container {
  display: none;
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
}
.model {
  width: 90%;
  height: fit-content;
  padding: 20px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 12px;
  background-color: var(--modelWrap);
  border-radius: 16px;
  /* flex: 1; */
}
.demo {
  flex: 1;
  width: 100%;
}
.model > h1 {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 21px;
  color: #828282;
}
.input_section {
  width: 100%;
  height: fit-content;
  display: flex;
  justify-content: center;
  padding: 0 20px;
  align-items: center;
  margin: 0;
  width: 90%;
  background-color: var(--modelInp);
  border-radius: 16px;
}
.input_section > i {
  color: var(--modelTxt);
  font-size: 20px;
}
/* ... */

